# Cadabra

./: .gitignore  Backlog.txt  Cargo.toml  LICENSE.txt  README.md  Todo.txt  build.rs  generate_sliding_attacks.rs  lines.txt  perft_results.txt  prepare_constants.rs
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: bench_positions.txt  perft_bench.rs  search_bench.rs
cargo/: config.toml
engine/: Cargo.toml
engine/src/: bench.rs  interface.rs  lib.rs  main.rs
engine/src/engine/: castling.rs  color.rs  lookup_tables.rs  mod.rs  piece.rs  square.rs  zobrist.rs
engine/src/engine/move_gen/: attack_tables.rs  mod.rs
engine/src/engine/search/: eval_consts.rs  evaluation.rs  evaluator.rs  mod.rs  perft.rs  quiescence.rs  repetition_table.rs  score_move.rs  search.rs  search_args.rs  search_stats.rs  tri_pv_table.rs
src/: attack_tables.rs  bench.rs  bitboard.rs  cmove.rs  constants.rs  definitions.rs  evaluation.rs  generate_sliding_attacks.rs  interface.rs  lib.rs  main.rs  make_move.rs  moov.rs  move_generator.rs  perft.rs  position.rs  precalculated_interface.rs  search.rs  uci.rs  zobrist.rs  zobrist_constants.rs
src/core/: bitboard.rs  color.rs  lookup_tables.rs  make_move.rs  mod.rs  moov.rs  moove.rs  piece.rs  position.rs  square.rs  zobrist.rs
src/core/move_generator/: attack_tables.rs  castling.rs  generate_moves.rs  mod.rs  move_list.rs  pin_and_check_masks.rs
src/engine/: bitboard.rs  color.rs  lookup_tables.rs  make_move.rs  mod.rs  moove.rs  piece.rs  position.rs  settings.rs  square.rs  zobrist.rs
src/engine/move_gen/: attack_tables.rs  generate_moves.rs  mod.rs  move_list.rs  pin_and_check_masks.rs
src/engine/search/: evaluation.rs  mod.rs  perft.rs  pv_table.rs  repetition_table.rs  score_move.rs  search.rs  search_args.rs  search_context.rs  search_stats.rs  search_structs.rs  transposition_table.rs  tri_pv_table.rs
src/improvement_tracker/: main.rs
src/move_generator/: castling.rs  mod.rs  move_generator.rs
src/search/: evaluation.rs  mod.rs  perft.rs  pv_table.rs  search.rs  transposition_table.rs
src/utils/: color.rs  lookup_tables.rs  mod.rs  piece.rs  settings.rs  square.rs  zobrist.rs
src/validator/: main.rs  test_positions.rs
tests/: config.cfg  perft_test.rs  perft_validation.rs  validator.rs
tests/common/: mod.rs  test_positions.rs
tuner/: .gitignore  Cargo.toml
tuner/src/: evolution_tuner.rs  main.rs  pgn_to_fen.rs  texel_tuner.rs  tuner.rs  tuner_evaluator.rs
validator/: Cargo.toml  main.rs
validator/src/: main.rs
