[package]
name = "cadabra"
version = "1.0.0"
authors = ["Joachim Enggaard Nebel"]
edition = "2021"
license = "BSD-2-Clause"
description = "UCI compatible chess engine"
repository = "https://github.com/JENebel/Cadabra/"
build = "src/generate_sliding_attacks.rs"
default-run = "cadabra"

[[bin]]
name = "validator"
path = "src/validator/main.rs"

[[bin]]
name = "cadabra"
path = "src/main.rs"

[dependencies]
bitintr = "0.3.0"
colored = "2.0.0"
const_for = "0.1.2"
heapless = "0.7.16"
lazy_static = "1.4.0"