[package]
name = "cadabra"
version = "1.2.0"
authors = ["Joachim Enggaard Nebel"]
edition = "2021"
license = "BSD-2-Clause"
description = "UCI compatible chess engine"
repository = "https://github.com/JENebel/Cadabra/"
build = "src/generate_sliding_attacks.rs"

[dependencies]
bitintr = "0.3.0"
colored = "2.0.0"
const_for = "0.1.2"
heapless = "0.7.16"
lazy_static = "1.4.0"
cache_line_size = "1.0.0"

[dev-dependencies]
chess = "3.2.0"