[package]
name = "tuner"
version = "0.1.0"
authors = ["Joachim Enggaard Nebel"]
edition = "2021"
license = "BSD-2-Clause"
description = "UCI compatible chess engine"
repository = "https://github.com/JENebel/Cadabra/"

[dependencies]
cadabra = { path = "../engine" }
chrono = "0.4.27"
pretty-duration = "0.1.1"
pgn-reader = "0.25.0"
shakmaty = "0.26.0"
rayon = "1.7.0"
rand = "0.8.5"
fastrand = "2.0.2"
term_size = "0.3.2"
num-format = "0.4.4"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"